--- a/2019_HS_Projekt_WarenkorbAnalyse/Import_Data.ipynb
+++ b/2019_HS_Projekt_WarenkorbAnalyse/Import_Data.ipynb
@@ -55,6 +55,7 @@
     "\n",
     "class DBConfig:\n",
     "    db_str = None\n",
+    "    tables = set()\n",
     "    \n",
     "    def __init__(self, db_host = DB_HOST, db_port = DB_PORT, db_name = DB_NAME, db_schema = DB_SCHEMA, db_admin_user = DB_ADMIN_USER, db_admin_password = DB_ADMIN_PASSWORD, db_user = DB_USER, db_password = DB_PASSWORD, db_user_grants = DB_USER_GRANTS):\n",
     "        self.db_host = db_host\n",
@@ -199,7 +200,7 @@
     "    if not table_config.content[column].is_unique:\n",
     "        create_command += \"index INT PRIMARY KEY NOT NULL\"\n",
     "        first_column = False\n",
-    "    \n",
+    "        \n",
     "    for column in table_config.content.columns[0:]:\n",
     "        print(\"Handle field '\"+ table_config.get_table_name(db_config) + \".\"+ column +\"' being of type '\"+ str(table_config.content[column].dtype) +\"'.\")\n",
     "        \n",
@@ -208,12 +209,19 @@
     "            \n",
     "        create_command += column + \" \"\n",
     "        create_command += str(table_config.types[column])\n",
+    "        table_name_index = column.find(\"_id\")\n",
     "        \n",
     "        if first_column:\n",
     "            create_command += \" PRIMARY KEY NOT NULL\"\n",
     "            table_config.content.set_index(column, inplace=True, verify_integrity=True)\n",
     "            first_column = False\n",
-    "    \n",
+    "        elif table_name_index != -1:\n",
+    "            table_name = column[:table_name_index]\n",
+    "            if table_name in db_config.tables:\n",
+    "                create_command += \" NOT NULL REFERENCES \" + table_name\n",
+    "            else:\n",
+    "                print(\"Field \"+ column +\" seems to reference table \"+ table_name +\" but this table does not exist.\")\n",
+    "                \n",
     "    create_command += \")\"\n",
     "    \n",
     "    print(\"Execute \"+ drop_command)\n",
@@ -225,8 +233,8 @@
     "    #print(\"Execute \"+ grant_command_02)\n",
     "    #db_config.cur.execute(grant_command_02)\n",
     "    db_config.conn.commit()\n",
-    "    \n",
-    "    \n",
+    "    db_config.tables.add(table_config.name)\n",
+    "      \n",
     "def add_data(db_config, table_config):\n",
     "    if db_config.db_schema is None or db_config.db_schema == \"\":\n",
     "        table_config.content.to_sql(table_config.name, db_config.engine, if_exists='append', chunksize=1000)\n",
@@ -245,75 +253,76 @@
      "text": [
       "Using db connection postgresql://db_admin:db_admin_0815_pw@192.168.0.1:5432 for DB creation.\n",
       "Using db connection postgresql://db_admin:db_admin_0815_pw@192.168.0.1:5432/warenkorb_db\n",
-      "Handle table 'order_products_train'\n",
-      "Handle field 'order_products_train.order_id'.\n",
-      "Handle field 'order_products_train.product_id'.\n",
-      "Handle field 'order_products_train.add_to_cart_order'.\n",
-      "Handle field 'order_products_train.reordered'.\n",
-      "Handle field 'order_products_train.order_id' being of type 'int64'.\n",
-      "Handle field 'order_products_train.product_id' being of type 'int64'.\n",
-      "Handle field 'order_products_train.add_to_cart_order' being of type 'int64'.\n",
-      "Handle field 'order_products_train.reordered' being of type 'int64'.\n",
-      "Execute DROP TABLE IF EXISTS order_products_train\n",
-      "Execute CREATE TABLE IF NOT EXISTS order_products_train (index INT PRIMARY KEY NOT NULL,order_id INT,product_id INT,add_to_cart_order INT,reordered INT)\n",
+      "Handle table 'aisle'\n",
+      "Handle field 'aisle.aisle_id'.\n",
+      "Handle field 'aisle.aisle'.\n",
+      "Handle field 'aisle.aisle_id' being of type 'int64'.\n",
+      "Handle field 'aisle.aisle' being of type 'object'.\n",
+      "Execute DROP TABLE IF EXISTS aisle\n",
+      "Execute CREATE TABLE IF NOT EXISTS aisle (aisle_id INT PRIMARY KEY NOT NULL,aisle TEXT)\n",
       "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
-      "Handle table 'departments'\n",
-      "Handle field 'departments.department_id'.\n",
-      "Handle field 'departments.department'.\n",
-      "Handle field 'departments.department_id' being of type 'int64'.\n",
-      "Handle field 'departments.department' being of type 'object'.\n",
-      "Execute DROP TABLE IF EXISTS departments\n",
-      "Execute CREATE TABLE IF NOT EXISTS departments (department_id INT PRIMARY KEY NOT NULL,department TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
-      "Handle table 'aisles'\n",
-      "Handle field 'aisles.aisle_id'.\n",
-      "Handle field 'aisles.aisle'.\n",
-      "Handle field 'aisles.aisle_id' being of type 'int64'.\n",
-      "Handle field 'aisles.aisle' being of type 'object'.\n",
-      "Execute DROP TABLE IF EXISTS aisles\n",
-      "Execute CREATE TABLE IF NOT EXISTS aisles (aisle_id INT PRIMARY KEY NOT NULL,aisle TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
-      "Handle table 'products'\n",
-      "Handle field 'products.product_id'.\n",
-      "Handle field 'products.product_name'.\n",
-      "Handle field 'products.aisle_id'.\n",
-      "Handle field 'products.department_id'.\n",
-      "Handle field 'products.product_id' being of type 'int64'.\n",
-      "Handle field 'products.product_name' being of type 'object'.\n",
-      "Handle field 'products.aisle_id' being of type 'int64'.\n",
-      "Handle field 'products.department_id' being of type 'int64'.\n",
-      "Execute DROP TABLE IF EXISTS products\n",
-      "Execute CREATE TABLE IF NOT EXISTS products (product_id INT PRIMARY KEY NOT NULL,product_name TEXT,aisle_id INT,department_id INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
-      "Handle table 'order_products_prior'\n",
-      "Handle field 'order_products_prior.order_id'.\n",
-      "Handle field 'order_products_prior.product_id'.\n",
-      "Handle field 'order_products_prior.add_to_cart_order'.\n",
-      "Handle field 'order_products_prior.reordered'.\n",
-      "Handle field 'order_products_prior.order_id' being of type 'int64'.\n",
-      "Handle field 'order_products_prior.product_id' being of type 'int64'.\n",
-      "Handle field 'order_products_prior.add_to_cart_order' being of type 'int64'.\n",
-      "Handle field 'order_products_prior.reordered' being of type 'int64'.\n",
-      "Execute DROP TABLE IF EXISTS order_products_prior\n",
-      "Execute CREATE TABLE IF NOT EXISTS order_products_prior (index INT PRIMARY KEY NOT NULL,order_id INT,product_id INT,add_to_cart_order INT,reordered INT)\n",
+      "Handle table 'department'\n",
+      "Handle field 'department.department_id'.\n",
+      "Handle field 'department.department'.\n",
+      "Handle field 'department.department_id' being of type 'int64'.\n",
+      "Handle field 'department.department' being of type 'object'.\n",
+      "Execute DROP TABLE IF EXISTS department\n",
+      "Execute CREATE TABLE IF NOT EXISTS department (department_id INT PRIMARY KEY NOT NULL,department TEXT)\n",
       "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'orders'\n",
-      "Handle field 'orders.order_id'.\n",
+      "Handle field 'orders.orders_id'.\n",
       "Handle field 'orders.user_id'.\n",
       "Handle field 'orders.eval_set'.\n",
       "Handle field 'orders.order_number'.\n",
       "Handle field 'orders.order_dow'.\n",
       "Handle field 'orders.order_hour_of_day'.\n",
       "Handle field 'orders.days_since_prior_order'.\n",
-      "Handle field 'orders.order_id' being of type 'int64'.\n",
+      "Handle field 'orders.orders_id' being of type 'int64'.\n",
       "Handle field 'orders.user_id' being of type 'int64'.\n",
+      "Field user_id seems to reference table user but this table does not exist.\n",
       "Handle field 'orders.eval_set' being of type 'object'.\n",
       "Handle field 'orders.order_number' being of type 'int64'.\n",
       "Handle field 'orders.order_dow' being of type 'int64'.\n",
       "Handle field 'orders.order_hour_of_day' being of type 'int64'.\n",
       "Handle field 'orders.days_since_prior_order' being of type 'float64'.\n",
       "Execute DROP TABLE IF EXISTS orders\n",
-      "Execute CREATE TABLE IF NOT EXISTS orders (order_id INT PRIMARY KEY NOT NULL,user_id INT,eval_set TEXT,order_number INT,order_dow INT,order_hour_of_day INT,days_since_prior_order FLOAT)\n",
+      "Execute CREATE TABLE IF NOT EXISTS orders (orders_id INT PRIMARY KEY NOT NULL,user_id INT,eval_set TEXT,order_number INT,order_dow INT,order_hour_of_day INT,days_since_prior_order FLOAT)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
+      "Handle table 'product'\n",
+      "Handle field 'product.product_id'.\n",
+      "Handle field 'product.product_name'.\n",
+      "Handle field 'product.aisle_id'.\n",
+      "Handle field 'product.department_id'.\n",
+      "Handle field 'product.product_id' being of type 'int64'.\n",
+      "Handle field 'product.product_name' being of type 'object'.\n",
+      "Handle field 'product.aisle_id' being of type 'int64'.\n",
+      "Handle field 'product.department_id' being of type 'int64'.\n",
+      "Execute DROP TABLE IF EXISTS product\n",
+      "Execute CREATE TABLE IF NOT EXISTS product (product_id INT PRIMARY KEY NOT NULL,product_name TEXT,aisle_id INT NOT NULL REFERENCES aisle,department_id INT NOT NULL REFERENCES department)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
+      "Handle table 'orders_product_train'\n",
+      "Handle field 'orders_product_train.orders_id'.\n",
+      "Handle field 'orders_product_train.product_id'.\n",
+      "Handle field 'orders_product_train.add_to_cart_order'.\n",
+      "Handle field 'orders_product_train.reordered'.\n",
+      "Handle field 'orders_product_train.orders_id' being of type 'int64'.\n",
+      "Handle field 'orders_product_train.product_id' being of type 'int64'.\n",
+      "Handle field 'orders_product_train.add_to_cart_order' being of type 'int64'.\n",
+      "Handle field 'orders_product_train.reordered' being of type 'int64'.\n",
+      "Execute DROP TABLE IF EXISTS orders_product_train\n",
+      "Execute CREATE TABLE IF NOT EXISTS orders_product_train (index INT PRIMARY KEY NOT NULL,orders_id INT NOT NULL REFERENCES orders,product_id INT NOT NULL REFERENCES product,add_to_cart_order INT,reordered INT)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
+      "Handle table 'orders_product_prior'\n",
+      "Handle field 'orders_product_prior.orders_id'.\n",
+      "Handle field 'orders_product_prior.product_id'.\n",
+      "Handle field 'orders_product_prior.add_to_cart_order'.\n",
+      "Handle field 'orders_product_prior.reordered'.\n",
+      "Handle field 'orders_product_prior.orders_id' being of type 'int64'.\n",
+      "Handle field 'orders_product_prior.product_id' being of type 'int64'.\n",
+      "Handle field 'orders_product_prior.add_to_cart_order' being of type 'int64'.\n",
+      "Handle field 'orders_product_prior.reordered' being of type 'int64'.\n",
+      "Execute DROP TABLE IF EXISTS orders_product_prior\n",
+      "Execute CREATE TABLE IF NOT EXISTS orders_product_prior (index INT PRIMARY KEY NOT NULL,orders_id INT NOT NULL REFERENCES orders,product_id INT NOT NULL REFERENCES product,add_to_cart_order INT,reordered INT)\n",
       "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n"
      ]
     }
@@ -327,11 +336,17 @@
     "db_config = DBConfig()\n",
     "\n",
     "for root, dirs, files in os.walk(zip_file_dir):\n",
+    "    files.sort()\n",
     "    for file in files:\n",
     "        if file.endswith(table_file_ending):\n",
     "            table_config = TableConfig()\n",
+    "            table_name = os.path.splitext(file)[0]\n",
+    "            table_name_index = table_name.find(\"_\")\n",
     "            \n",
-    "            table_config.name = os.path.splitext(file)[0]\n",
+    "            if table_name_index != -1 and table_name[:table_name_index].isdigit():\n",
+    "                table_name = table_name[table_name_index+1:]\n",
+    "            \n",
+    "            table_config.name = table_name\n",
     "            table = pd.read_csv(os.path.join(root, file), delimiter=table_file_delimiter)\n",
     "            table_config.content = table  \n",
     "            #print(\"Read table content of '\"+table_config.name +\"'.\")\n",
