--- a/Import_Data.ipynb
+++ b/Import_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,9 @@
     "DB_NAME = \"bank_db\"\n",
     "DB_SCHEMA = \"\"\n",
     "DB_ADMIN_USER = \"db_admin\" \n",
-    "DB_ADMIN_PASSWORD = \"db_admin_0815_pw\"\n",
+    "DB_ADMIN_PASSWORD = \"db_admin_0815_pw\" \n",
     "DB_USER = \"db_user\" \n",
-    "DB_PASSWORD = \"db_user_pw\" \n",
+    "DB_PASSWORD = \"db_user_pw\"\n",
     "DB_USER_GRANTS = \"SELECT\" #\"SELECT, INSERT, UPDATE, DELETE\"\n",
     "\n",
     "zip_file = \"data.zip\"\n",
@@ -84,6 +84,7 @@
     "\n",
     "class DBConfig:\n",
     "    db_str = None\n",
+    "    tables = set()\n",
     "    \n",
     "    def __init__(self, db_host = DB_HOST, db_port = DB_PORT, db_name = DB_NAME, db_schema = DB_SCHEMA, db_admin_user = DB_ADMIN_USER, db_admin_password = DB_ADMIN_PASSWORD, db_user = DB_USER, db_password = DB_PASSWORD, db_user_grants = DB_USER_GRANTS):\n",
     "        self.db_host = db_host\n",
@@ -237,12 +238,19 @@
     "            \n",
     "        create_command += column + \" \"\n",
     "        create_command += str(table_config.types[column])\n",
+    "        table_name_index = column.find(\"_id\")\n",
     "        \n",
     "        if first_column:\n",
     "            create_command += \" PRIMARY KEY NOT NULL\"\n",
     "            table_config.content.set_index(column, inplace=True, verify_integrity=True)\n",
     "            first_column = False\n",
-    "            \n",
+    "        elif table_name_index != -1:\n",
+    "            table_name = column[:table_name_index]\n",
+    "            if table_name in db_config.tables:\n",
+    "                create_command += \" NOT NULL REFERENCES \" + table_name\n",
+    "            else:\n",
+    "                print(\"Field \"+ column +\" seems to reference table \"+ table_name +\" but this table does not exist.\")\n",
+    "                \n",
     "    create_command += \")\"\n",
     "    \n",
     "    print(\"Execute \"+ drop_command)\n",
@@ -254,7 +262,7 @@
     "    #print(\"Execute \"+ grant_command_02)\n",
     "    #db_config.cur.execute(grant_command_02)\n",
     "    db_config.conn.commit()\n",
-    "    \n",
+    "    db_config.tables.add(table_config.name)\n",
     "    \n",
     "def add_data(db_config, table_config):\n",
     "    if db_config.db_schema is None or db_config.db_schema == \"\":\n",
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,68 +282,6 @@
      "text": [
       "Using db connection postgresql://db_admin:db_admin_0815_pw@192.168.0.1:5432 for DB creation.\n",
       "Using db connection postgresql://db_admin:db_admin_0815_pw@192.168.0.1:5432/bank_db\n",
-      "Handle table 'disp'\n",
-      "Handle field 'disp.disp_id'.\n",
-      "Handle field 'disp.client_id'.\n",
-      "Handle field 'disp.account_id'.\n",
-      "Handle field 'disp.type'.\n",
-      "Handle field 'disp.disp_id' being of type 'int64'.\n",
-      "Handle field 'disp.client_id' being of type 'int64'.\n",
-      "Handle field 'disp.account_id' being of type 'int64'.\n",
-      "Handle field 'disp.type' being of type 'object'.\n",
-      "Execute DROP TABLE IF EXISTS disp\n",
-      "Execute CREATE TABLE IF NOT EXISTS disp (disp_id INT PRIMARY KEY NOT NULL,client_id INT,account_id INT,type TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
-      "Handle table 'client'\n",
-      "Handle field 'client.client_id'.\n",
-      "Handle field 'client.birth_number'.\n",
-      "Handle field 'client.district_id'.\n",
-      "Handle field 'client.client_id' being of type 'int64'.\n",
-      "Handle field 'client.birth_number' being of type 'int64'.\n",
-      "Handle field 'client.district_id' being of type 'int64'.\n",
-      "Execute DROP TABLE IF EXISTS client\n",
-      "Execute CREATE TABLE IF NOT EXISTS client (client_id INT PRIMARY KEY NOT NULL,birth_number INT,district_id INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Handle table 'trans'\n",
-      "Handle field 'trans.trans_id'.\n",
-      "Handle field 'trans.account_id'.\n",
-      "Handle field 'trans.date'.\n",
-      "Handle field 'trans.date' having 'format = %y%m%d'.\n",
-      "Field 'trans.date' is of type date.\n",
-      "Handle field 'trans.type'.\n",
-      "Handle field 'trans.operation'.\n",
-      "Handle field 'trans.amount'.\n",
-      "Handle field 'trans.balance'.\n",
-      "Handle field 'trans.k_symbol'.\n",
-      "Handle field 'trans.bank'.\n",
-      "Handle field 'trans.account'.\n",
-      "Handle field 'trans.trans_id' being of type 'int64'.\n",
-      "Handle field 'trans.account_id' being of type 'int64'.\n",
-      "Handle field 'trans.date' being of type 'object'.\n",
-      "Handle field 'trans.type' being of type 'object'.\n",
-      "Handle field 'trans.operation' being of type 'object'.\n",
-      "Handle field 'trans.amount' being of type 'float64'.\n",
-      "Handle field 'trans.balance' being of type 'float64'.\n",
-      "Handle field 'trans.k_symbol' being of type 'object'.\n",
-      "Handle field 'trans.bank' being of type 'object'.\n",
-      "Handle field 'trans.account' being of type 'float64'.\n",
-      "Execute DROP TABLE IF EXISTS trans\n",
-      "Execute CREATE TABLE IF NOT EXISTS trans (trans_id INT PRIMARY KEY NOT NULL,account_id INT,date DATE,type TEXT,operation TEXT,amount FLOAT,balance FLOAT,k_symbol TEXT,bank TEXT,account FLOAT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
       "Handle table 'district'\n",
       "Handle field 'district.a1'.\n",
       "Handle field 'district.a2'.\n",
@@ -375,23 +321,17 @@
       "Handle field 'district.a16' being of type 'int64'.\n",
       "Execute DROP TABLE IF EXISTS district\n",
       "Execute CREATE TABLE IF NOT EXISTS district (a1 INT PRIMARY KEY NOT NULL,a2 TEXT,a3 TEXT,a4 INT,a5 INT,a6 INT,a7 INT,a8 INT,a9 INT,a10 FLOAT,a11 INT,a12 FLOAT,a13 FLOAT,a14 INT,a15 FLOAT,a16 INT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
-      "Handle table 'orders'\n",
-      "Handle field 'orders.order_id'.\n",
-      "Handle field 'orders.account_id'.\n",
-      "Handle field 'orders.bank_to'.\n",
-      "Handle field 'orders.account_to'.\n",
-      "Handle field 'orders.amount'.\n",
-      "Handle field 'orders.k_symbol'.\n",
-      "Handle field 'orders.order_id' being of type 'int64'.\n",
-      "Handle field 'orders.account_id' being of type 'int64'.\n",
-      "Handle field 'orders.bank_to' being of type 'object'.\n",
-      "Handle field 'orders.account_to' being of type 'int64'.\n",
-      "Handle field 'orders.amount' being of type 'float64'.\n",
-      "Handle field 'orders.k_symbol' being of type 'object'.\n",
-      "Execute DROP TABLE IF EXISTS orders\n",
-      "Execute CREATE TABLE IF NOT EXISTS orders (order_id INT PRIMARY KEY NOT NULL,account_id INT,bank_to TEXT,account_to INT,amount FLOAT,k_symbol TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
+      "Handle table 'client'\n",
+      "Handle field 'client.client_id'.\n",
+      "Handle field 'client.birth_number'.\n",
+      "Handle field 'client.district_id'.\n",
+      "Handle field 'client.client_id' being of type 'int64'.\n",
+      "Handle field 'client.birth_number' being of type 'int64'.\n",
+      "Handle field 'client.district_id' being of type 'int64'.\n",
+      "Execute DROP TABLE IF EXISTS client\n",
+      "Execute CREATE TABLE IF NOT EXISTS client (client_id INT PRIMARY KEY NOT NULL,birth_number INT,district_id INT NOT NULL REFERENCES district)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'account'\n",
       "Handle field 'account.account_id'.\n",
       "Handle field 'account.district_id'.\n",
@@ -404,8 +344,8 @@
       "Handle field 'account.frequency' being of type 'object'.\n",
       "Handle field 'account.date' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS account\n",
-      "Execute CREATE TABLE IF NOT EXISTS account (account_id INT PRIMARY KEY NOT NULL,district_id INT,frequency TEXT,date DATE)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute CREATE TABLE IF NOT EXISTS account (account_id INT PRIMARY KEY NOT NULL,district_id INT NOT NULL REFERENCES district,frequency TEXT,date DATE)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'loan'\n",
       "Handle field 'loan.loan_id'.\n",
       "Handle field 'loan.account_id'.\n",
@@ -424,8 +364,36 @@
       "Handle field 'loan.payments' being of type 'float64'.\n",
       "Handle field 'loan.status' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS loan\n",
-      "Execute CREATE TABLE IF NOT EXISTS loan (loan_id INT PRIMARY KEY NOT NULL,account_id INT,date DATE,amount FLOAT,duration INT,payments FLOAT,status TEXT)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n",
+      "Execute CREATE TABLE IF NOT EXISTS loan (loan_id INT PRIMARY KEY NOT NULL,account_id INT NOT NULL REFERENCES account,date DATE,amount INT,duration INT,payments FLOAT,status TEXT)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
+      "Handle table 'orders'\n",
+      "Handle field 'orders.orders_id'.\n",
+      "Handle field 'orders.account_id'.\n",
+      "Handle field 'orders.bank_to'.\n",
+      "Handle field 'orders.account_to'.\n",
+      "Handle field 'orders.amount'.\n",
+      "Handle field 'orders.k_symbol'.\n",
+      "Handle field 'orders.orders_id' being of type 'int64'.\n",
+      "Handle field 'orders.account_id' being of type 'int64'.\n",
+      "Handle field 'orders.bank_to' being of type 'object'.\n",
+      "Handle field 'orders.account_to' being of type 'int64'.\n",
+      "Handle field 'orders.amount' being of type 'float64'.\n",
+      "Handle field 'orders.k_symbol' being of type 'object'.\n",
+      "Execute DROP TABLE IF EXISTS orders\n",
+      "Execute CREATE TABLE IF NOT EXISTS orders (orders_id INT PRIMARY KEY NOT NULL,account_id INT NOT NULL REFERENCES account,bank_to TEXT,account_to INT,amount INT,k_symbol TEXT)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
+      "Handle table 'disp'\n",
+      "Handle field 'disp.disp_id'.\n",
+      "Handle field 'disp.client_id'.\n",
+      "Handle field 'disp.account_id'.\n",
+      "Handle field 'disp.type'.\n",
+      "Handle field 'disp.disp_id' being of type 'int64'.\n",
+      "Handle field 'disp.client_id' being of type 'int64'.\n",
+      "Handle field 'disp.account_id' being of type 'int64'.\n",
+      "Handle field 'disp.type' being of type 'object'.\n",
+      "Execute DROP TABLE IF EXISTS disp\n",
+      "Execute CREATE TABLE IF NOT EXISTS disp (disp_id INT PRIMARY KEY NOT NULL,client_id INT NOT NULL REFERENCES client,account_id INT NOT NULL REFERENCES account,type TEXT)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n",
       "Handle table 'card'\n",
       "Handle field 'card.card_id'.\n",
       "Handle field 'card.disp_id'.\n",
@@ -438,8 +406,48 @@
       "Handle field 'card.type' being of type 'object'.\n",
       "Handle field 'card.issued' being of type 'object'.\n",
       "Execute DROP TABLE IF EXISTS card\n",
-      "Execute CREATE TABLE IF NOT EXISTS card (card_id INT PRIMARY KEY NOT NULL,disp_id INT,type TEXT,issued DATE)\n",
-      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO bank_user\n"
+      "Execute CREATE TABLE IF NOT EXISTS card (card_id INT PRIMARY KEY NOT NULL,disp_id INT NOT NULL REFERENCES disp,type TEXT,issued DATE)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handle table 'trans'\n",
+      "Handle field 'trans.trans_id'.\n",
+      "Handle field 'trans.account_id'.\n",
+      "Handle field 'trans.date'.\n",
+      "Handle field 'trans.date' having 'format = %y%m%d'.\n",
+      "Field 'trans.date' is of type date.\n",
+      "Handle field 'trans.type'.\n",
+      "Handle field 'trans.operation'.\n",
+      "Handle field 'trans.amount'.\n",
+      "Handle field 'trans.balance'.\n",
+      "Handle field 'trans.k_symbol'.\n",
+      "Handle field 'trans.bank'.\n",
+      "Handle field 'trans.account'.\n",
+      "Handle field 'trans.trans_id' being of type 'int64'.\n",
+      "Handle field 'trans.account_id' being of type 'int64'.\n",
+      "Handle field 'trans.date' being of type 'object'.\n",
+      "Handle field 'trans.type' being of type 'object'.\n",
+      "Handle field 'trans.operation' being of type 'object'.\n",
+      "Handle field 'trans.amount' being of type 'float64'.\n",
+      "Handle field 'trans.balance' being of type 'float64'.\n",
+      "Handle field 'trans.k_symbol' being of type 'object'.\n",
+      "Handle field 'trans.bank' being of type 'object'.\n",
+      "Handle field 'trans.account' being of type 'float64'.\n",
+      "Execute DROP TABLE IF EXISTS trans\n",
+      "Execute CREATE TABLE IF NOT EXISTS trans (trans_id INT PRIMARY KEY NOT NULL,account_id INT NOT NULL REFERENCES account,date DATE,type TEXT,operation TEXT,amount INT,balance FLOAT,k_symbol TEXT,bank TEXT,account FLOAT)\n",
+      "Execute GRANT SELECT ON ALL TABLES IN SCHEMA public TO db_user\n"
      ]
     }
    ],
@@ -452,11 +460,17 @@
     "db_config = DBConfig()\n",
     "\n",
     "for root, dirs, files in os.walk(zip_file_dir):\n",
+    "    files.sort()\n",
     "    for file in files:\n",
     "        if file.endswith(table_file_ending):\n",
     "            table_config = TableConfig()\n",
+    "            table_name = os.path.splitext(file)[0]\n",
+    "            table_name_index = table_name.find(\"_\")\n",
     "            \n",
-    "            table_config.name = os.path.splitext(file)[0]\n",
+    "            if table_name_index != -1 and table_name[:table_name_index].isdigit():\n",
+    "                table_name = table_name[table_name_index+1:]\n",
+    "            \n",
+    "            table_config.name = table_name\n",
     "            table = pd.read_csv(os.path.join(root, file), delimiter=table_file_delimiter)\n",
     "            table_config.content = table  \n",
     "            #print(\"Read table content of '\"+table_config.name +\"'.\")\n",
