Set DB host name

--- a/2019_HS_Data_Access/Data_Access_PostgreSQL.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL.ipynb
@@ -49,13 +49,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@86.119.36.94:5432/bank_db\n"
+      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/bank_db\n"
      ]
     }
    ],
    "source": [
-    "# define the database connection string\n",
-    "DB_HOST = '86.119.36.94' \n",
+    "# define the database connection string \n",
+    "DB_HOST='server2053.cs.technik.fhnw.ch'\n",
     "DB_PORT = '5432'\n",
     "DB_DBNAME = 'bank_db' # or 'warenkorb_db'\n",
     "DB_USERNAME = 'db_user' \n",
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://db_user:***@86.119.36.94:5432/bank_db\n",
+      " * postgresql://db_user:***@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
       "4500 rows affected.\n"
      ]
     },
@@ -28155,7 +28155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://db_user:***@86.119.36.94:5432/bank_db\n",
+      " * postgresql://db_user:***@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
       "4500 rows affected.\n",
       "+------------+-------------+--------------------+------------+\n",
       "| account_id | district_id |     frequency      |    date    |\n",
@@ -32686,7 +32686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://db_user:***@86.119.36.94:5432/bank_db\n",
+      " * postgresql://db_user:***@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
       "8 rows affected.\n"
      ]
     },
@@ -32853,7 +32853,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://db_user:***@86.119.36.94:5432/bank_db\n",
+      " * postgresql://db_user:***@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
       "4 rows affected.\n"
      ]
     },
@@ -33121,7 +33121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://db_user:***@86.119.36.94:5432/bank_db\n",
+      " * postgresql://db_user:***@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
       "4500 rows affected.\n",
       "Selection: (576, 55, 'POPLATEK MESICNE', datetime.date(1993, 1, 1))\n",
       "DataFrame based selection: account_id                  576\n",
@@ -36426,13 +36426,7 @@
       "(1904, 70, 'POPLATEK MESICNE', datetime.date(1996, 5, 18))\n",
       "(1040, 19, 'POPLATEK MESICNE', datetime.date(1996, 5, 18))\n",
       "(776, 66, 'POPLATEK MESICNE', datetime.date(1996, 5, 18))\n",
-      "(3162, 63, 'POPLATEK TYDNE', datetime.date(1996, 5, 18))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(3162, 63, 'POPLATEK TYDNE', datetime.date(1996, 5, 18))\n",
       "(379, 32, 'POPLATEK MESICNE', datetime.date(1996, 5, 18))\n",
       "(3731, 70, 'POPLATEK MESICNE', datetime.date(1996, 5, 20))\n",
       "(1323, 43, 'POPLATEK MESICNE', datetime.date(1996, 5, 20))\n",
@@ -36574,7 +36568,13 @@
       "(3089, 12, 'POPLATEK TYDNE', datetime.date(1996, 7, 2))\n",
       "(7181, 77, 'POPLATEK PO OBRATU', datetime.date(1996, 7, 2))\n",
       "(1241, 53, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
-      "(1004, 70, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
+      "(1004, 70, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(2344, 13, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
       "(2530, 74, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
       "(170, 59, 'POPLATEK MESICNE', datetime.date(1996, 7, 2))\n",
@@ -38238,13 +38238,7 @@
       "(5270, 44, 'POPLATEK MESICNE', datetime.date(1993, 1, 13))\n",
       "(1699, 53, 'POPLATEK MESICNE', datetime.date(1993, 1, 14))\n",
       "(3909, 1, 'POPLATEK MESICNE', datetime.date(1993, 1, 14))\n",
-      "(2926, 50, 'POPLATEK MESICNE', datetime.date(1993, 1, 14))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(2926, 50, 'POPLATEK MESICNE', datetime.date(1993, 1, 14))\n",
       "(1731, 33, 'POPLATEK MESICNE', datetime.date(1993, 1, 14))\n",
       "(11265, 15, 'POPLATEK MESICNE', datetime.date(1993, 1, 14))\n",
       "(2519, 4, 'POPLATEK MESICNE', datetime.date(1993, 1, 15))\n",
@@ -39172,7 +39166,13 @@
       "(3548, 23, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(5984, 11, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(3091, 3, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
-      "(626, 72, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
+      "(626, 72, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(998, 47, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(3326, 5, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
       "(2457, 76, 'POPLATEK MESICNE', datetime.date(1993, 11, 11))\n",
@@ -40255,13 +40255,7 @@
       "(80, 43, 'POPLATEK MESICNE', datetime.date(1995, 9, 27))\n",
       "(3417, 48, 'POPLATEK MESICNE', datetime.date(1995, 9, 28))\n",
       "(169, 4, 'POPLATEK MESICNE', datetime.date(1995, 9, 28))\n",
-      "(4047, 45, 'POPLATEK TYDNE', datetime.date(1995, 9, 29))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(4047, 45, 'POPLATEK TYDNE', datetime.date(1995, 9, 29))\n",
       "(7487, 4, 'POPLATEK MESICNE', datetime.date(1995, 10, 1))\n",
       "(992, 22, 'POPLATEK MESICNE', datetime.date(1995, 10, 1))\n",
       "(331, 65, 'POPLATEK MESICNE', datetime.date(1995, 10, 2))\n",
@@ -41735,7 +41729,13 @@
       "(2873, 70, 'POPLATEK MESICNE', datetime.date(1996, 12, 13))\n",
       "(3962, 54, 'POPLATEK MESICNE', datetime.date(1996, 12, 13))\n",
       "(2376, 71, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
-      "(2995, 51, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
+      "(2995, 51, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(3984, 51, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
       "(659, 63, 'POPLATEK MESICNE', datetime.date(1996, 12, 14))\n",
       "(3137, 39, 'POPLATEK MESICNE', datetime.date(1996, 12, 15))\n",
@@ -42428,13 +42428,7 @@
       "(1764, 68, 'POPLATEK MESICNE', datetime.date(1997, 9, 4))\n",
       "(4158, 27, 'POPLATEK MESICNE', datetime.date(1997, 9, 4))\n",
       "(585, 4, 'POPLATEK MESICNE', datetime.date(1997, 9, 4))\n",
-      "(5698, 1, 'POPLATEK MESICNE', datetime.date(1997, 9, 4))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(5698, 1, 'POPLATEK MESICNE', datetime.date(1997, 9, 4))\n",
       "(178, 59, 'POPLATEK MESICNE', datetime.date(1997, 9, 6))\n",
       "(2079, 55, 'POPLATEK MESICNE', datetime.date(1997, 9, 6))\n",
       "(2480, 35, 'POPLATEK MESICNE', datetime.date(1997, 9, 7))\n",
