--- a/2019_HS_Data_Access/Data_Access_PostgreSQL.ipynb
+++ b/2019_HS_Data_Access/Data_Access_PostgreSQL.ipynb
@@ -88,14 +88,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Connected: db_user@bank_db'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(psycopg2.OperationalError) could not translate host name \"server2053.cs.technik.fhnw.ch\" to address: Temporary failure in name resolution\n",
+      "\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n",
+      "Connection info needed in SQLAlchemy format, example:\n",
+      "               postgresql://username:password@hostname/dbname\n",
+      "               or an existing connection: dict_keys([])\n"
+     ]
     }
    ],
    "source": [
