--- a/2019_HS_Data_Access/ER_Model_Creation.ipynb
+++ b/2019_HS_Data_Access/ER_Model_Creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@86.119.36.94:5432/bank_db\n"
+      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/bank_db\n"
      ]
     }
    ],
    "source": [
-    "db_host = \"86.119.36.94\" \n",
+    "db_host = \"server2053.cs.technik.fhnw.ch\" \n",
     "db_port = \"5432\"\n",
     "db_name = \"bank_db\"\n",
     "db_user = \"db_user\" \n",
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@86.119.36.94:5432/warenkorb_db\n"
+      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/warenkorb_db\n"
      ]
     }
    ],
