set file name and folder

--- a/2019_HS_Data_Access/ER_Model_Creation.ipynb
+++ b/2019_HS_Data_Access/ER_Model_Creation.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eralchemy import render_er"
+    "from eralchemy import render_er\n",
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -18,7 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/bank_db\n"
+      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/bank_db\n",
+      "/home/jovyan/bank_db.png\n"
      ]
     }
    ],
@@ -30,7 +33,9 @@
     "db_password = \"db_user_pw\"\n",
     "db_str = 'postgresql://{username}:{password}@{host}:{port}/{dbname}'.format(username=db_user,password=db_password,host=db_host,port=db_port,dbname=db_name)\n",
     "print(db_str)\n",
-    "render_er(db_str, 'bank_db.png')"
+    "file = os.path.join(Path.home(), 'bank_db.png')\n",
+    "print(file)\n",
+    "render_er(db_str, file)"
    ]
   },
   {
@@ -42,7 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/warenkorb_db\n"
+      "postgresql://db_user:db_user_pw@server2053.cs.technik.fhnw.ch:5432/warenkorb_db\n",
+      "/home/jovyan/warenkorb_db.png\n"
      ]
     }
    ],
@@ -50,7 +56,9 @@
     "db_name = \"warenkorb_db\"\n",
     "db_str = 'postgresql://{username}:{password}@{host}:{port}/{dbname}'.format(username=db_user,password=db_password,host=db_host,port=db_port,dbname=db_name)\n",
     "print(db_str)\n",
-    "render_er(db_str, 'warenkorb_db.png')"
+    "file = os.path.join(Path.home(), 'warenkorb_db.png')\n",
+    "print(file)\n",
+    "render_er(db_str, file)"
    ]
   },
   {
